<resources>
    <string name="app_name">TripGuide</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="HaveAnAccount">Have an account ?</string>
    <string name="Login"> Log In</string>
    <string name="SignUpTo">To</string>
    <string name="SignUpLogo3">Trip Guide</string>
    <string name="SignUpLogo">Sign Up</string>
    <string name="logIn">Log In</string>
    <string name="account">Don\'t Have an Account ?</string>

    <string name="password" />
    <string name="passwordLogin">Password</string>
    <string name="emailLogin">Email</string>
    <string name="logo3">Trip Guide</string>
    <string name="logo2">To</string>
    <string name="logo1">Log In</string>
    <string name="login1">Log In</string>
    <string name="signUp1">Sign Up</string>

    <string name="TripName">Trip Name</string>
    <string name="StartPoint">Start Point</string>
    <string name="EndPoint">End Point</string>

    <string name="saveTrip">Save</string>

    <string-array name="spinnerRepeating">
        <item>No Repeat</item>
        <item>Daily</item>
        <item>Weakly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="spinnerDirection">
        <item>One Way</item>
        <item>Round Trip</item>
    </string-array>

    <string name="upComming">UpComing</string>
    <string name="history">History</string>
    <string name="logout">LogOut</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="other">Other</string>
    <string name="NoTrip">There Is No Upcoming Trips</string>
    <string name="StartTrip">Start Trip</string>
    <string name="TripNote">Note</string>

    <string name="addnote_item">Add Notes</string>
    <string name="done_item">Make Done</string>
    <string name="edit_item">Edit</string>
    <string name="cancel_item">Cancel</string>
    <string name="delete_item">Delete</string>
    <string name="AddNote">Save Note</string>
    <string name="notecontent_hint">Enter Your Note Here</string>
    <string name="cancelNote">Cancel</string>
    <string name="history_text">There Is No Trips In Hisory</string>
    <string name="history_note">Show Notes</string>
    <string name="history_delete">Delete</string>
    <string name="logoText">Trip Guide</string>
    <string name="facebook_app_id">235731750932306</string>
    <string name="fb_login_protocol_scheme">fb235731750932306</string>
    <string name="mapHistory">Map History</string>
    <string name="close_map">Close</string>

</resources>
