<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addNotes"
        android:title="@string/addnote_item"
        app:showAsAction="never"
        android:orderInCategory="1"
        />
    <item
        android:id="@+id/done_menu"
        android:title="@string/done_item"
        app:showAsAction="never"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/edit"
        android:title="@string/edit_item"
        app:showAsAction="never"
        android:orderInCategory="3"
        />
    <item
        android:id="@+id/cancel_menu"
        android:title="@string/cancel_item"
        app:showAsAction="never"
        android:orderInCategory="4"
        />
    <item
        android:id="@+id/delete_menu"
        android:title="@string/delete_item"
        app:showAsAction="never"
        android:orderInCategory="5"
        />





</menu>