<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".login.Login"
     >


    <LinearLayout
        android:id="@+id/topLevel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView

            android:id="@+id/logo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"

            android:gravity="center|bottom"
            android:text="@string/logo1"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            android:textStyle="italic" />

        <TextView

            android:id="@+id/logo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/logo2"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/logo3"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"

            android:gravity="center"
            android:text="@string/logo3"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/medLevel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:orientation="vertical"
        android:weightSum="4">

        <EditText

            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="20dp"

            android:layout_weight="1"
            android:drawableRight="@drawable/email"
            android:ems="10"
            android:hint="@string/emailLogin"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/white"
            android:textCursorDrawable="@android:color/white" />

        <EditText

            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"

            android:drawableRight="@drawable/password"
            android:ems="10"
            android:hint="@string/passwordLogin"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHighlight="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@android:color/white"
            android:textCursorDrawable="@android:color/white" />

        <Button

            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"

            android:layout_marginRight="20dp"
            android:layout_weight="0.85"
            android:text="@string/logIn"
            android:textColor=" #b338b5 "
            android:textSize="18sp" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            app:buttonSize="wide" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLevel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/accountText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/account"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <TextView

            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:longClickable="false"
            android:onClick="goToSignUpActivity"
            android:padding="2dp"
            android:text="@string/signUp1"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>