<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTripName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".addTrip.AddTrip">

    <EditText
        android:id="@+id/tripName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="10"
        android:drawableRight="@drawable/tripname"
        android:ems="10"
        android:hint="@string/TripName"
        android:inputType="textPersonName" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="vertical"
        android:background="@drawable/shape"
        android:weightSum="100">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="17"

            android:text="@string/StartPoint"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"

            android:background="#ffffee"
            android:orientation="vertical">

            <fragment
                android:id="@+id/frag"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></fragment>

            <TextView
                android:id="@+id/startPoint"
                android:layout_width="344dp"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="12"
                android:drawableRight="@drawable/startpoint"
                android:ems="10"
                android:hint="@string/StartPoint"
                android:inputType="textPersonName" />
        </FrameLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="17"
            android:layout_marginBottom="5dp"
            android:text="@string/EndPoint"
            android:textSize="18sp" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="30"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/quantum_white_100"
            android:orientation="vertical">

            <fragment
                android:id="@+id/frag2"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ></fragment>

            <TextView
                android:id="@+id/endPoint"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="12"

                android:ems="10"
                android:hint="@string/EndPoint"
                android:inputType="textPersonName" />
        </FrameLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/shape">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <ImageView
                android:id="@+id/timer"
                android:layout_width="72dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/calender"
                android:layout_width="85dp"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/calendar" />

            <TextView
                android:id="@+id/calenderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@drawable/shape"
        android:layout_marginTop="20dp">

        <Spinner
            android:id="@+id/repeating"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:entries="@array/spinnerRepeating" />

        <Spinner
            android:id="@+id/direction"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:entries="@array/spinnerDirection" />
    </LinearLayout>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/addTrip"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/saveTrip"
        />

</LinearLayout>